--- a/Source/Portfolio.Api/Portfolio.Api.csproj
+++ b/Source/Portfolio.Api/Portfolio.Api.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<RootNamespace>RescuePC.Portfolio.Api</RootNamespace>
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Portfolio.Api.Contracts\Portfolio.Api.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
