--- a/Source/Portfolio.Web/ClientApp/package.json
+++ b/Source/Portfolio.Web/ClientApp/package.json
@@ -7,12 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:api": "orval"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "axios": "^1.13.2",
+    "i18next": "^25.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.3",
     "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "orval": "^7.19.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
