--- a/Source/Portfolio.Web/Portfolio.Web.csproj
+++ b/Source/Portfolio.Web/Portfolio.Web.csproj
@@ -20,11 +20,11 @@
 	  <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="10.0.3" />
 	</ItemGroup>
 
-	<Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
+	<Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish" Condition="'$(BuildingInsideDocker)' != 'true'">
 		<Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
 		<Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />
 		<ItemGroup>
-			<DistFiles Include="$(SpaRoot)dist\**" />
+			<DistFiles Include="$(SpaRoot)build\**" />
 			<ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
 				<RelativePath>wwwroot\%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
 				<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
