--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -3,6 +3,12 @@ name: Deploy DEV
 on:
   push:
     branches: [develop]
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Branch do zbudowania i wdrożenia (np. feature/16-my-feature)'
+        required: true
+        default: develop
 
 env:
   REGISTRY: ghcr.io
@@ -14,8 +20,19 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      tag: ${{ steps.tag.outputs.TAG }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref || 'develop' }}
+
+      - name: Compute image tag
+        id: tag
+        run: |
+          REF="${{ inputs.ref || 'develop' }}"
+          TAG=$(echo "$REF" | sed 's|/|-|g')
+          echo "TAG=$TAG" >> $GITHUB_OUTPUT
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -30,7 +47,7 @@ jobs:
           context: .
           file: Deployment/Docker/Dockerfiles/Portfolio.Web.Dockerfile
           push: true
-          tags: ${{ env.IMAGE }}:develop
+          tags: ${{ env.IMAGE }}:${{ steps.tag.outputs.TAG }}
 
   deploy:
     needs: build-and-push
@@ -56,6 +73,6 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /opt/portfolio-dev
-            docker compose pull
-            docker compose up -d
+            WEB_TAG=${{ needs.build-and-push.outputs.tag }} docker compose pull
+            WEB_TAG=${{ needs.build-and-push.outputs.tag }} docker compose up -d
             docker image prune -f
