--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,8 +1,7 @@
 name: Pipeline
 
 on:
-  push:
-    branches: ['feature/**']
+  workflow_dispatch:
   pull_request:
     branches: [develop, main]
 
