--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,7 @@ name: Pipeline
 on:
   workflow_dispatch:
   pull_request:
-    branches: [develop, main]
+    branches: [develop, master]
 
 jobs:
   build:
