--- a/Deployment/Infra/Caddyfile
+++ b/Deployment/Infra/Caddyfile
@@ -1,3 +1,7 @@
+wiktorwijata.com {
+    reverse_proxy portfolio-web-prod:8080
+}
+
 dev.wiktorwijata.com {
     reverse_proxy portfolio-web-dev:8080
 }
