--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -61,7 +61,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "Deployment/Envs/Dev/docker-compose.yml,Deployment/Envs/Dev/Caddyfile"
+          source: "Deployment/Envs/Dev/docker-compose.yml"
           target: /opt/portfolio-dev
           strip_components: 3
 
@@ -72,6 +72,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
+            docker network create portfolio 2>/dev/null || true
             cd /opt/portfolio-dev
             WEB_TAG=${{ needs.build-and-push.outputs.tag }} docker compose pull
             WEB_TAG=${{ needs.build-and-push.outputs.tag }} docker compose up -d
