--- a/Deployment/Envs/Prod/docker-compose.yml
+++ b/Deployment/Envs/Prod/docker-compose.yml
@@ -7,26 +7,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8080
     networks:
-      - portfolio-prod
-
-  caddy:
-    image: caddy:2-alpine
-    container_name: caddy-prod
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
-    networks:
-      - portfolio-prod
-
-volumes:
-  caddy_data:
-  caddy_config:
+      - portfolio
 
 networks:
-  portfolio-prod:
-    driver: bridge
+  portfolio:
+    external: true
