--- a/Deployment/Envs/Dev/docker-compose.yml
+++ b/Deployment/Envs/Dev/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
     networks:
-      - portfolio
+      - dev
 
 networks:
-  portfolio:
+  dev:
     external: true
