--- a/Deployment/Envs/Prod/docker-compose.yml
+++ b/Deployment/Envs/Prod/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8080
     networks:
-      - portfolio
+      - prod
 
 networks:
-  portfolio:
+  prod:
     external: true
