--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -52,7 +52,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           source: "Deployment/Envs/Prod/docker-compose.yml"
-          target: /opt/portfolio-prod
+          target: /opt/environments/prod/apps/portfolio
           strip_components: 3
 
       - name: SSH deploy na PROD VPS
@@ -62,8 +62,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            docker network create portfolio 2>/dev/null || true
-            cd /opt/portfolio-prod
+            cd /opt/environments/prod/apps/portfolio
             docker compose pull
             docker compose up -d
             docker image prune -f
