--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -3,6 +3,12 @@ name: Deploy PROD
 on:
   push:
     branches: [master]
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Branch do zbudowania i wdrożenia'
+        required: true
+        default: master
 
 env:
   REGISTRY: ghcr.io
